--- a/assets/scss/default/_shortcode.scss
+++ b/assets/scss/default/_shortcode.scss
@@ -153,7 +153,7 @@ font-family: 'Poppins', sans-serif;
   }
 }
 .bg_image--teri {
-  background-image: url(./assets/images/bg/bg-image-16.jpg) !important;
+  background-image: url(assets/images/bg/bg-image-16.jpg) !important;
 }
 
 @for $i from 1 through 80 {
