--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-// All Css Here
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "../public/assets/css/plugins.css";
 @import "../public/assets/scss/style.css";
-
 @import "~slick-carousel/slick/slick.css";
-@import "~slick-carousel/slick/slick-theme.css";
+@import "~slick-carousel/slick/slick-theme.css";/*# sourceMappingURL=index.css.map */
